--- a/WEB-PAGE/styles/pages/_show.scss
+++ b/WEB-PAGE/styles/pages/_show.scss
@@ -110,6 +110,21 @@
     }
 }
 
+
+.no-comment {
+    svg {
+        display: block;
+        margin: auto;
+        margin-top: 0.5rem;
+    }
+    
+    p {
+        text-align: center;
+        margin-top: 1rem;
+    }
+}
+
+
 .bar {
     height: 1px;
     width: 90%;
