Fixed comments that couldn't be seen

--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -828,6 +828,11 @@ input[type=file] {
   display: none;
 }
 
+.white-space {
+  height: 4rem;
+  width: 100%;
+}
+
 .no-comment svg {
   display: block;
   margin: auto;
