Fixed comments styles

--- a/WEB-PAGE/styles/pages/_show.scss
+++ b/WEB-PAGE/styles/pages/_show.scss
@@ -68,7 +68,7 @@
     height: 4rem;
     width: 90%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin: auto;
 
     img {
