--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -789,7 +789,7 @@ input[type=file] {
   height: 4rem;
   width: 90%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin: auto;
 }
 .comment img {
