--- a/WEB-PAGE/styles/pages/_show.scss
+++ b/WEB-PAGE/styles/pages/_show.scss
@@ -94,7 +94,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     position: absolute;
     bottom: 5px;
 
@@ -106,9 +106,26 @@
 
     .write-comment {
         margin-left: 5px;
-        width: 80%;
+        width: 75%;
+
         &::-webkit-scrollbar {
             display: none;
+        }
+    }
+
+    button {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        border: 1px blue solid;
+        color: blue;
+        background-color: rgba(0, 0, 255, 0.5);
+        transition: 0.4s;
+        cursor: pointer;
+
+        &:hover {
+            background-color: rgba(0, 0, 255, 1);
+            color: white;
         }
     }
 }
@@ -125,7 +142,7 @@
         margin: auto;
         margin-top: 0.5rem;
     }
-    
+
     p {
         text-align: center;
         margin-top: 1rem;
