When clicking on the picture on the comments, the users now get redirected to the profile of the user that wrote the comment

--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -819,6 +819,7 @@ input[type=file] {
   height: 40px;
   width: 40px;
   border-radius: 50%;
+  cursor: pointer;
 }
 .create-comment .write-comment {
   margin-left: 5px;
