--- a/WEB-PAGE/styles/pages/_show.scss
+++ b/WEB-PAGE/styles/pages/_show.scss
@@ -102,6 +102,7 @@
         height: 40px;
         width: 40px;
         border-radius: 50%;
+        cursor: pointer;
     }
 
     .write-comment {
